# lensref

./: .gitignore  Model.agda  README.md  TODO  lensref.cabal  runperftest.hs  runtests.hs
docs/: DotPlugin.hs  Introduction.pandoc  Makefile
src/: Demo.hs  Demo2.hs  LensRef.hs  Utils.hs  runperftest.hs  runtests.hs
src/Control/Lens/: Simple.hs
src/Data/: LensRef.hs
src/Data/LensRef/: Arbitrary.hs  Class.hs  Common.hs  Context.hs  EqRef.hs  Fast.hs  Pure.hs  SimpleRef.hs  Test.hs  TestEnv.hs
src/LensRef/: BruteForce.hs  Context.hs  Demo.hs  Demo2.hs  Elerea.hs  EqRef.hs
src/LensRef/Demo/: SevenGUIs.hs  Simple.hs
