name:               lensref
version:            0.3
category:           Control, Data
synopsis:           References which can be joined and on which lenses can be applied
description:
    The lensref package provides references which can be joined and on which lenses can be applied.
    .
    To see what is possible to do with lens references, look at the test cases in "Data.LensRef.Test"
    .
    For more information visit the following links:
    .
    -<http://www.haskell.org/haskellwiki/LGtk haskell.org wiki page>
    .
    -<http://lgtk.wordpress.com/ Wordpress blog>
    .
    -<https://github.com/divipp/lensref GitHub repository>
    .
    -<http://hackage.haskell.org/package/lensref Haddock documentation (this page)>
stability:          experimental
license:            BSD3
license-file:       LICENSE
author:             Péter Diviánszky
homepage:           http://www.haskell.org/haskellwiki/LGtk
bug-reports:        https://github.com/divipp/lensref/issues
maintainer:         divipp@gmail.com
cabal-version:      >= 1.9.2
build-type:         Simple
extra-source-files: changelog
                    docs/Introduction.pandoc
                    docs/Makefile

source-repository head
  type:             git
  location:         https://github.com/divipp/lensref.git

Flag tests
  Description:      Build the tests
  Default:          False

Flag pure
  Description:      Use the pure but slow implementation of lens references
  Default:          False

library

  hs-source-dirs:
                    src
  build-depends:
                    base < 5
                  , transformers >= 0.3 && < 0.5
                  , mtl < 2.3
                  , monad-control < 0.4
                  , containers < 0.6
  exposed-modules:
                    Data.LensRef
                    Data.LensRef.EqRef
                    Demo
                    Demo2
  other-modules:
                    Control.Lens.Simple
                    Data.LensRef.SimpleRef
                    Data.LensRef.Pure
                    Data.LensRef.Fast
  if flag(tests)
    build-depends:
--                    operational < 0.3
--                  , QuickCheck >= 2 && < 2.8
    exposed-modules:
--                    Data.LensRef.Arbitrary
                    Data.LensRef.Test

  if flag(pure)
    cpp-options:
                    -D__PURE__

  ghc-options:
                    -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults

test-suite runtests

  type:             exitcode-stdio-1.0
  main-is:          runtests.hs
  build-depends:
                    base < 5
                  , lensref
  if flag(tests)
    cpp-options:
                    -D__TESTS__
  ghc-options:
                    -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults

benchmark lensref-performance-test

  type:             exitcode-stdio-1.0
  main-is:          runperftest.hs
  build-depends:
                    base < 5
                  , criterion
                  , lensref
  if flag(tests)
    cpp-options:
                    -D__TESTS__

  ghc-options:
                    -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults
