name:               lensref
version:            0.3
category:           Control, Data
synopsis:           References which can be joined and on which lenses can be applied
description:
    The lensref package provides references which can be joined and on which lenses can be applied.
    .
    For more information visit the following links:
    .
    -<http://www.haskell.org/haskellwiki/LGtk haskell.org wiki page>
    .
    -<http://lgtk.wordpress.com/ Wordpress blog>
    .
    -<https://github.com/divipp/lensref GitHub repository>
    .
    -<http://hackage.haskell.org/package/lensref Haddock documentation (this page)>
stability:          experimental
license:            BSD3
license-file:       LICENSE
author:             Péter Diviánszky
homepage:           http://www.haskell.org/haskellwiki/LGtk
bug-reports:        https://github.com/divipp/lensref/issues
maintainer:         divipp@gmail.com
cabal-version:      >= 1.9.2
build-type:         Simple
extra-source-files: changelog
                    docs/Introduction.pandoc
                    docs/Makefile

source-repository head
  type:             git
  location:         https://github.com/divipp/lensref.git

Flag pure
  Description:      Use the pure but slow implementation of lens references
  Default:          False

library

  hs-source-dirs:
                    src
  build-depends:
                    base < 5
                  , mtl < 2.3
                  , containers < 0.6
                  , lens-family
  exposed-modules:
                    LensRef.Context
                    LensRef
                    LensRef.EqRef

                    LensRef.Demo.Simple
                    LensRef.Demo.SevenGUIs

  if flag(pure)
    cpp-options:
                    -D__PURE__

  ghc-options:
                    -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults

test-suite runtests

  type:             exitcode-stdio-1.0
  main-is:          runtests.hs
  build-depends:
                    base < 5
                  , mtl < 2.3
                  , lens-family
                  , lensref
  ghc-options:
                    -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults

benchmark lensref-performance-test

  type:             exitcode-stdio-1.0
  main-is:          runperftest.hs
  build-depends:
                    base < 5
                  , mtl < 2.3
                  , lens-family
                  , criterion == 1.0.*
                  , lensref

  ghc-options:
                    -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults
