name:               lensref
version:            0.3
category:           Control, Data
synopsis:           References which can be joined and on which lenses can be applied
description:
    The lensref package provides references which can be joined and on which lenses can be applied.
    .
    For more information visit the following links:
    .
    -<http://www.haskell.org/haskellwiki/LGtk haskell.org wiki page>
    .
    -<http://lgtk.wordpress.com/ Wordpress blog>
    .
    -<https://github.com/divipp/lensref GitHub repository>
    .
    -<http://hackage.haskell.org/package/lensref Haddock documentation (this page)>
stability:          experimental
license:            BSD3
license-file:       LICENSE
author:             Péter Diviánszky
homepage:           http://www.haskell.org/haskellwiki/LGtk
bug-reports:        https://github.com/divipp/lensref/issues
maintainer:         divipp@gmail.com
cabal-version:      >= 1.9.2
build-type:         Simple
extra-source-files: changelog
                    docs/Introduction.pandoc
                    docs/DotPlugin.hs
                    docs/Makefile

source-repository head
  type:             git
  location:         https://github.com/divipp/lensref.git

library

  hs-source-dirs:   src

  build-depends:    base < 5
                  , mtl < 2.3
                  , containers < 0.6
                  , lens-family < 1.3

  exposed-modules:  LensRef
                    LensRef.Elerea
                    LensRef.Test
  other-modules:    Utils
--                    LensRef.Demo.Simple
--                    LensRef.Demo.SevenGUIs

  ghc-options:      -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults

test-suite runtests

  type:             exitcode-stdio-1.0
  main-is:          src/runtests.hs

  build-depends:    base < 5
                  , mtl < 2.3
                  , lens-family
                  , lensref

  ghc-options:      -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults

benchmark lensref-performance-test

  type:             exitcode-stdio-1.0
  main-is:          src/runperftest.hs

  build-depends:    base < 5
                  , mtl < 2.3
                  , lens-family
                  , criterion == 1.0.*
                  , lensref

  ghc-options:      -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults
